Add access to adverts data and use it on main page

--- a/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
+++ b/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
@@ -6,6 +6,7 @@
     .row {
         display: flex;
         align-items: center;
+        flex-direction: column;
 
         .button {
             background-color: $color-warm;
