--- a/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
+++ b/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
@@ -6,6 +6,14 @@
     .row {
         display: flex;
         flex-direction: column;
+        margin-top: 3em;
+        
+        .avatarImg {
+            width: 7em;
+            height: 7em;
+            object-fit: cover;
+            border-radius: 50%;
+        }
     }
 
     .button {
