--- a/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
+++ b/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
@@ -3,6 +3,12 @@
 .advertCard {
     margin: 2em 0;
 
+    .img {
+        width: 100%;
+        height: 30vw;
+        object-fit: cover;
+    }
+
     .row {
         display: flex;
         align-items: center;
