--- a/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
+++ b/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
@@ -3,6 +3,13 @@
 .advertCard {
     margin: 2em 0;
 
+    .img {
+        width: 100%;
+        height: 50vw;
+        object-fit: cover;
+        object-position: center;
+    }
+
     .row {
         display: flex;
         flex-direction: column;
