Add component button and use it in components

--- a/client/src/components/features/SearchForm/SearchForm.module.scss
+++ b/client/src/components/features/SearchForm/SearchForm.module.scss
@@ -1,28 +1,6 @@
 @import '../../../styles/settings.scss';
 
-.search {
-    display: flex;
-    justify-content: center;
-
-    .form {
-        border-color: $color-cool;
-        border-radius: $border-radius;
-    }
-
-    .buttonCol {
-        display: flex;
-        justify-content: center;
-
-        .button {
-            background-color: $color-cool;
-            border-color: $color-cool;
-            border-radius: $border-radius;
-            padding: $button-padding;
-            &:hover {
-                background-color: $color-main;
-                border-color: $color-main;
-            }
-        }    
-    }
-
+.search .form {
+    border-color: $color-cool;
+    border-radius: $border-radius;
 }
