--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -2,6 +2,6 @@ $color-main: #B7B760;
 $color-warm: #A16460;
 $color-cool: #576984;
 
-$border-radius: 1em;
+$border-radius: 20px;
 
-$button-padding: 5px 15px;
+$button-padding: 6px 18px;
