--- a/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
+++ b/client/src/components/common/AdvertSummary/AdvertSummary.module.scss
@@ -1,16 +1,16 @@
 @import '../../../styles/settings.scss';
 
-.advertCard {
-    margin: 2em 0;
+.summaryBox {
+    margin: 12px 0;
 
-    .img {
+    &__img {
         width: 100%;
         height: 30vw;
         object-fit: cover;
         object-position: center;
     }
 
-    .row {
+    &__details {
         display: flex;
         align-items: center;
         flex-direction: column;
