--- a/client/src/components/features/Navigation/Navigation.module.scss
+++ b/client/src/components/features/Navigation/Navigation.module.scss
@@ -4,9 +4,7 @@
     background-color: $color-main;
     margin-bottom: 26px;
 
-    .navigationLinks {
-        display: flex;
-        flex-direction: row;
+    &__links {
         align-items: center;
         gap: 8px;
         margin-left: 8px;
