--- a/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
+++ b/client/src/components/pages/SingleAdvert/SingleAdvert.module.scss
@@ -1,23 +1,20 @@
 @import '../../../styles/settings.scss';
 
-.advertCard {
-    margin: 2em 0;
+.card {
+    margin: 34px 0;
 
-    .img {
-        width: 100%;
-        height: 50vw;
+    &__img {
+        max-height: 600px;
         object-fit: cover;
         object-position: center;
     }
 
-    .row {
-        display: flex;
+    &__details {
         flex-direction: column;
-        margin-top: 3em;
         
-        .avatarImg {
-            width: 7em;
-            height: 7em;
+        &__img {
+            width: 100px;
+            height: 100px;
             object-fit: cover;
             border-radius: 50%;
         }
